Mon Nov 15 23:54:45 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* eval_intern.h (CHECK_STACK_OVERFLOW): it was not intended to add
	  size_t to a pointer typed VALUE*.  Coverity Scan found this defect.

Mon Nov 15 23:41:21 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* compile.c (iseq_set_exception_local_table, iseq_set_local_table,
	  rb_iseq_build_from_ary): fix type inconsistency (which is benign
	  because sizeof(ID) == sizeof(ID*), though).  Coverity Scan found
	  these bugs.

Mon Nov 15 22:47:27 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* vm_eval.c (rb_funcall): ensure va_end after va_init_list.  Coverity
	  Scan found this bug.

Mon Nov 15 06:43:48 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* etc/openssl/ossl_ssl.c (ossl_ssl_get_cert): raise exception if
	  pointer is invalid.  Thanks Ippei Obayashi! [ruby-dev:42573]

Mon Dec  6 22:53:49 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* cygwin/GNUMakefile.in ($(RCFILES)): fixes [ruby-core:33525].
	  Patch by Luis Lavena <luislavena AT gmail.com>.
	  http://groups.google.com/group/rubyinstaller/browse_thread/thread/412abfdcb695aecb

Mon Dec  6 22:28:41 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* string.c (rb_str_concat): partially reverts r30040 because
	  it unpexpectedly changes the behavior of String#<<.

Fri Nov  5 00:14:15 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/fiddle/extconf.rb: fixing ffi library location on windows.
	  Thanks Usa! [ruby-core:32930]

Wed Nov  3 14:13:46 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_enc_cr_str_buf_cat): concatenation of valid
	  encoding string and invalid encoding string should result
	  invalid encoding.  [ruby-core:33027]

Wed Nov  3 07:47:25 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/irb/ruby-lex.rb (RubyLex#identify_string): parse multiple
	  regex options.  a patch from Heesob Park in [ruby-core:32988].

Sat Oct 30 06:32:52 2010  Tanaka Akira  <akr@fsij.org>
